<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="pencarian">Pencarian</string>
    <string name="liga">Daftar Liga</string>
    <string name="title_activity_nav">Nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="no_signal">No Internet Connection</string>
    <string name="hintSearch">team1 vs team2</string>
    <string name="logo">logo</string>
    <string name="listTeam">LIST TEAM</string>
    <string name="trophy">Trophy</string>
    <string name="tabNext">Next Event</string>
    <string name="tabPast">Past Event</string>
    <string name="home">HOME</string>
    <string name="away">AWAY</string>
    <string name="score">SCORE</string>
    <string name="goal">GOAL</string>
    <string name="yellow_card">YELLOW CARD</string>
    <string name="red_card">RED CARD</string>
    <string name="shoot">TOTAL SHOOT</string>
    <string name="formation">FORMATION</string>
    <string name="lineup">LINE-UP</string>
    <string name="search">Search Event</string>
    <string name="favorite">Favorite</string>
    <string name="name">Name</string>
    <string name="played">Played</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="jersey">Jersey</string>
</resources>
