<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/menu_daftar_liga">

    <fragment
        android:id="@+id/menu_daftar_liga"
        android:name="kade.submission2.footballmatchschedule.view.fragment.LeagueFragment"
        android:label="@string/liga"
        tools:layout="@layout/fragment_liga" />

    <fragment
        android:id="@+id/menu_pencarian"
        android:name="kade.submission2.footballmatchschedule.view.fragment.SearchFragment"
        android:label="@string/pencarian"
        tools:layout="@layout/fragment_pencarian" />

    <fragment
        android:id="@+id/menu_favorit"
        android:name="kade.submission2.footballmatchschedule.view.fragment.MatchFavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite_pertandingan" />

</navigation>