<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressDetail"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameLeague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollLeague"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLeague">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/sectionBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/sectionLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/logoLeague"
                            android:layout_width="180dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:padding="2dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_launcher" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelLogoLeague"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="start"
                            android:padding="10dp"
                            android:text="@string/logo"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageTrophy"
                            android:layout_width="180dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:padding="2dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_launcher" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/labelImageTrophy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="start"
                            android:padding="10dp"
                            android:text="@string/trophy"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:typeface="sans" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/infoLeague2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sectionLogo"
                    android:paddingTop="5dp"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sectionBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sectionBody"
                android:layout_marginTop="20dp">

                <ProgressBar
                    android:id="@+id/progressBanner"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewBanner"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:focusableInTouchMode="true" />

                <com.rd.PageIndicatorView
                    android:id="@+id/indicator"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/viewBanner"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    app:piv_animationType="drop"
                    app:piv_dynamicCount="true"
                    app:piv_selectedColor="@android:color/black"
                    app:piv_unselectedColor="@android:color/darker_gray"
                    tools:piv_padding="12dp"
                    tools:piv_radius="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sectionTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sectionBanner">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/labelRecyclerTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="10dp"
                    android:text="@string/listTeam"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <ProgressBar
                    android:id="@+id/progressTeam"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTeam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/labelRecyclerTeam" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sectionMatchSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sectionTeam"
                android:layout_marginTop="20dp">

                <ProgressBar
                    android:id="@+id/progressSchedule"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabsSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    app:tabIndicatorColor="@android:color/white"
                    app:tabSelectedTextColor="@android:color/white"
                    app:tabTextColor="@android:color/darker_gray" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/frameSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="650dp"
                    android:layout_below="@id/tabsSchedule"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/infoLeague1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/frameSchedule"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:maxLines="3"
                    android:textAlignment="gravity" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/noConn"
        layout="@layout/signal_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</RelativeLayout>